oauth2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization      # ANNOTATIONS FOR USE AUTH RESPONSE HEADERS
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri   # ANNOTATIONS FOR USE AUTH RESPONSE HEADERS
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth            # ANNOTATIONS FOR USE AUTH RESPONSE HEADERS
  name: <appname>   # change to your application name
  namespace: <namespace>   # change to your namespace
spec:
  tls:
  - hosts:
    - <appurl>  # change to your domain
  rules:
  - host: <appurl>  # change to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <appname>    # change to your application service name
            port:
              number: 80
             

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <appurl>-oauth2-proxy   # change <appurl> your application name
  namespace: <namespace>    # change to your namespace
spec:
  ingressClassName: nginx
  rules:
  - host: <appurl> # change to your domain
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
